# curso_colisao_2d

./: LICENSE  README.md
cpp_project/: CMakeLists.txt
cpp_project/libGelEngine/: CMakeLists.txt
cpp_project/libGelEngine/src/: CMakeLists.txt
cpp_project/libGelEngine/src/cpp/: Body.cpp
cpp_project/libGelEngine/src/include/: Body.hpp  Math.hpp
cpp_project/libGelEngine/test/: CMakeLists.txt  Vec2_test.cpp
cpp_project/libGelRenderIO/: CMakeLists.txt
cpp_project/libGelRenderIO/src/: CMakeLists.txt
cpp_project/libGelRenderIO/src/cpp/: main.cpp  testBed.hpp
cpp_project/libGelRenderIO/src/cpp/game/: ball.hpp  gameObject.hpp
cpp_project/libGelRenderIO/src/cpp/renders/: graphIo.hpp  keysInfo.hpp
cpp_project/libGelRenderIO/src/cpp/renders/opengl/glfwGlad/: glfwGlad.cpp  glfwGlad.hpp
cpp_project/libGelRenderIO/src/cpp/shapes/: Rect.cpp
cpp_project/libGelRenderIO/src/include/: IShape.hpp
cpp_project/libGelRenderIO/src/include/shapes/: Rect.hpp
cpp_project/libGelRenderIO/src/include/utils/: Log.hpp
cpp_project/libGelRenderIO/test/: CMakeLists.txt  Shape_test.cpp
cpp_project/projCollision2D/: CMakeLists.txt
cpp_project/projCollision2D/src/: CMakeLists.txt
cpp_project/projCollision2D/test/: CMakeLists.txt
htlm5_project/: index.html
htlm5_project/src/gelEngine/: Math.js
htlm5_project/src/gelRenderIO/: FooGelRender.js
htlm5_project/src/gelRenderIO/utils/: log.js
